cluster-ingress-management/route-rules/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
  # Must match the namespace where istio-ingressgateway runs so SDS loads TLS secrets correctly.
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "jalju.com"
        - "blog.jalju.com"
        - "bear-feast.jalju.com"
        - "bear-feast-api.jalju.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "jalju.com"
        - "blog.jalju.com"
        - "bear-feast.jalju.com"
        - "bear-feast-api.jalju.com"
      tls:
        mode: SIMPLE
        credentialName: wildcard-jalju-com-tls
