cluster-ingress-management/route-rules/argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: istio-system
spec:
  hosts:
    - "argocd.jalju.com"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
