cluster-ingress-management/route-rules/blog.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blog
  namespace: istio-system
spec:
  hosts:
    - "jalju.com"
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: notion-blog.blog.svc.cluster.local
            port:
              number: 80
