cluster-ingress-management/route-rules/loki.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: loki
  namespace: istio-system
spec:
  hosts:
    - "loki.jalju.com"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki.monitoring.svc.cluster.local
            port:
              number: 3100
