cluster-ingress-management/route-rules/ngrinder.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ngrinder
  namespace: istio-ingress
spec:
  hosts:
    - "ngrinder.jalju.com"
  gateways:
    - public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: controller.ngrinder.svc.cluster.local
            port:
              number: 80
