cluster-ingress-management/route-rules/sentry.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: sentry-web.sentry.svc.cluster.local
  ports:
    - port: 9000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry-ingress
  namespace: ingress-nginx
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sentry.bare.witt.kr
      secretName: witt-bare-wildcard-cert
  rules:
    - host: sentry.bare.witt.kr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sentry-external
                port:
                  number: 9000
